Rental page updates

--- a/src/common/colors.scss
+++ b/src/common/colors.scss
@@ -2,6 +2,7 @@ $black: #000000;
 $white: #ffffff;
 $red: #ff3015;
 $green: #207537;
+$light-green: #48fb47;
 
 $purple: #6308d3; //e90cba
 $purple-90: rgba($purple, 0.9);
