--- a/src/components/rental-list/rental-list.scss
+++ b/src/components/rental-list/rental-list.scss
@@ -95,7 +95,7 @@
     }
 
     .post-details {
-      padding: 20px;
+      padding: 10px;
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -107,27 +107,55 @@
       .list-view-price {
         display: flex;
         justify-content: space-between;
-        background-color: $purple-10;
-        border-radius: 0 0 5px 5px;
-        border-bottom: 3px solid $purple-60;
-        margin: 0 0 10px;
+        border: 1px solid rgba($black, 0.3);
+        background-color: rgba($black, 0.9);
+        border-radius: 5px;
         > div {
-          padding: 10px;
+          padding: 6px;
           display: inline-flex;
           flex-direction: column;
-          align-items: flex-start;
+          align-items: center;
           border-radius: 4px;
-
+          border-right: 1px solid rgba($white, 0.2);
+          width: 100%;
+          cursor: pointer;
+          transition: 0.3s ease;
+          &:last-child {
+            border: none;
+          }
           span {
             text-transform: uppercase;
-            font-size: 0.65rem;
+            font-size: 0.6rem;
             font-weight: 500;
-            &:first-child {
-              font-size: 0.8rem;
+            color: $white;
+            transition: 0.3s ease;
+            &:nth-child(2) {
+              font-size: 0.85rem;
               font-weight: 700;
-              color: $green;
+              color: $light-green;
             }
           }
+          &:hover {
+            background-color: rgba($light-green, 0.4);
+            span {
+              color: $white;
+              &:nth-child(2) {
+                color: rgba($black, 0.9);
+              }
+            }
+          }
+        }
+      }
+
+      .dealer {
+        display: flex;
+        img {
+          max-width: 110px;
+        }
+        ul {
+          font-size: 0.75rem;
+          margin: 0;
+          padding-left: 20px;
         }
       }
 
@@ -202,7 +230,7 @@
         position: absolute;
         height: 37px;
         top: 0;
-        right: 6px;
+        left: 6px;
         z-index: 2;
       }
       &:after {
@@ -213,13 +241,13 @@
         position: absolute;
         height: 36px;
         top: 6px;
-        right: 6px;
+        left: 6px;
         z-index: 1;
       }
       img {
         width: 20px;
         position: absolute;
-        right: 10px;
+        left: 11px;
         top: 5px;
         z-index: 3;
       }
@@ -250,11 +278,16 @@
         }
       }
       .post-details {
-        padding: 0 10px 10px !important;
+        padding: 10px !important;
         h5 {
-          font-size: 0.875rem;
+          font-size: 1rem;
+          font-family: $secondary-font;
+          font-weight: 700;
           top: 5px;
           margin: 0 !important;
+          span {
+            color: $purple !important;
+          }
         }
         p {
           bottom: 5px;
@@ -267,24 +300,48 @@
         .distance-price {
           margin: 5px 0;
         }
+        .list-view-price {
+          > div {
+            align-items: center;
+            border-right: 1px solid rgba($white, 0.2);
+            width: 100%;
+            &:last-child {
+              border: none;
+            }
+          }
+        }
+        .dealer {
+          img {
+            max-width: 150px;
+          }
+          ul {
+            font-size: 0.875rem;
+            margin: 0 0 0 20px;
+          }
+        }
       }
       .featured-icon {
         &:before {
           border: 10px solid $purple;
           height: 27px;
           background: transparent;
+          right: 6px;
+          left: auto;
           border-bottom-color: transparent;
         }
         &:after {
           border: 10px solid $purple-60;
           height: 27px;
           top: 4px;
+          right: 6px;
+          left: auto;
           background: transparent;
           border-bottom-color: transparent;
         }
         img {
           width: 16px;
           right: 8px;
+          left: auto;
         }
       }
     }
