--- a/src/views/post-details/post-details.html
+++ b/src/views/post-details/post-details.html
@@ -97,6 +97,14 @@
               :icon="['fab', 'whatsapp']"
               @click="openWhatsapp(postData.phone)"
             />
+            <!-- prettier-ignore -->
+            <Button
+              type="green"
+              text="Email"
+              class="flex-fill ml-1"
+              :icon="['fas', 'envelope']"
+              @click="openEmail(postData.email)"
+            />
           </div>
         </div>
       </div>
